[project]
name = "awslabs.nova-canvas-mcp-server"
version = "0.1.081004"
description = "An AWS Labs Model Context Protocol (MCP) server for Amazon Nova Canvas"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.37.24",
    "loguru>=0.7.3",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.11.1",
]

[project.scripts]
"awslabs.nova-canvas-mcp-server" = "awslabs.nova_canvas_mcp_server.server:main"

[dependency-groups]
dev = [
    "boto3-stubs[bedrock-runtime]>=1.37.24",
    "commitizen>=4.4.1",
    "pre-commit>=4.2.0",
    "pyright>=1.1.398",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 99
extend-include = ["*.ipynb"]
exclude = [
    ".venv",
    "**/__pycache__",
    "**/node_modules",
    "**/dist",
    "**/build",
    "**/env",
    "**/.ruff_cache",
    "**/.venv",
    "**/.ipynb_checkpoints"
]
force-exclude = true

[tool.ruff.lint]
exclude = ["__init__.py"]
select = ["C", "D", "E", "F", "I", "W"]
ignore = ["C901", "E501", "E741", "F402", "F823", "D100", "D106"]

[tool.ruff.lint.isort]
lines-after-imports = 2
no-sections = true

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = ["F704"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.6"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "awslabs/nova_canvas_mcp_server/__init__.py:__version__"
]
update_changelog_on_bump = true

[tool.hatch.build.targets.wheel]
packages = ["awslabs"]

[tool.bandit]
exclude_dirs = ["venv","tests"]
